SF-595 Fix select overflow on connect project page

--- a/src/SIL.XForge.Scripture/ClientApp/src/app/connect-project/connect-project.component.scss
+++ b/src/SIL.XForge.Scripture/ClientApp/src/app/connect-project/connect-project.component.scss
@@ -73,11 +73,6 @@
         padding: 16px;
       }
 
-      mdc-select {
-        width: 100%;
-        margin-bottom: 4px;
-      }
-
       mdc-list-divider {
         margin-left: 22px;
       }
@@ -106,4 +101,12 @@
       margin-left: 32px;
     }
   }
+}
+
+#based-on-field {
+  overflow: hidden;
+}
+
+mdc-select {
+  margin-bottom: 4px;
 }
